UnityDevOrg/force-app/main/default/objects/GeneralSettings__c/GeneralSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Can be used to be able to manage environment settings, like recordtype id&#39;s</description>
    <label>General Settings</label>
</CustomObject>