UnityDevOrg/force-app/main/default/objects/GeneralSettings__c/fields/RTAccountCustomer__c.field-meta.xml
<CustomField>
    <fullName>RTAccountCustomer__c</fullName>
    <description>Contains the Account Customer RecordType Id</description>
    <label>RT Account Customer</label>
    <length>18</length>
    <type>Text</type>
</CustomField>