UnityDevOrg/force-app/main/default/objects/GeneralSettings__c/fields/RTAccountProspect__c.field-meta.xml
<CustomField>
    <fullName>RTAccountProspect__c</fullName>
    <description>Contains the Account Prospect RecordType Id</description>
    <label>RT Account Prospect</label>
    <length>18</length>
    <type>Text</type>
</CustomField>