UnityDevOrg/force-app/main/default/objects/GeneralSettings__c/fields/RTAccountSubmittedProspect__c.field-meta.xml
<CustomField>
    <fullName>RTAccountSubmittedProspect__c</fullName>
    <description>Contains the Account Submitted Prospect RecordType Id</description>
    <label>RT Account Submitted Prospect</label>
    <length>18</length>
    <type>Text</type>
</CustomField>