UnityDevOrg/force-app/main/default/objects/GeneralSettings__c/fields/RTCaseComplaint__c.field-meta.xml
<CustomField>
    <fullName>RTCaseComplaint__c</fullName>
    <description>Contains the Case Complaint RecordType Id</description>
    <label>RT Case Complaint</label>
    <length>18</length>
    <type>Text</type>
</CustomField>